[package]
name = "gittorrent"
version = "0.2.0"
edition = "2021"
authors = ["Erica Windsich <erica@cyberdione.ai>"]
description = "Decentralized git hosting using libp2p networking"
license = "MIT"
repository = "https://github.com/hyprstream/hyprstream/tree/main/crates/gittorrent"
keywords = ["git", "p2p", "libp2p", "decentralized", "networking"]
categories = ["network-programming", "development-tools"]

[[bin]]
name = "gittorrentd"
path = "src/bin/gittorrentd.rs"

[[bin]]
name = "git-remote-gittorrent"
path = "src/bin/git-remote-gittorrent.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Crypto
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

# Encoding
hex = "0.4"
base64 = "0.21"

# Configuration
config = "0.13"
dirs = "5.0"
toml = "0.8"

# Git utilities (0.20.3 for CVE-2024-24577 fix in libgit2 1.9.2)
git2.workspace = true

# Using libp2p for P2P networking and DHT

# Terminal colors
colored = "2.0"

# File operations
glob = "0.3"
tempfile = "3.0"

# XET integration dependencies
async-trait = "0.1"

# libp2p networking
libp2p = { version = "0.56", features = ["kad", "mdns", "noise", "tcp", "tokio", "yamux", "identify", "request-response", "macros"] }

# Mainline (BEP5) DHT locator for did:at9p (#889, epic #880 Track C).
# Optional: nothing ships enabled until Track C wiring lands.
mainline = { version = "7.0", optional = true }
blake3 = { workspace = true, optional = true }

# iroh-blobs content-addressed byte transport (F1, #899).
# 0.101.0 pins iroh =1.0.0-rc.0 - the exact version the workspace pins via
# web-transport-iroh 0.5.x; co-bump all three together (see workspace Cargo.toml).
iroh-blobs = { version = "=0.101.0", default-features = false, features = ["fs-store"], optional = true }
multihash = "0.19"
sha2 = "0.10"

# Additional networking and crypto
futures = "0.3"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
parking_lot.workspace = true

[features]
default = []
# Enable additional debug logging
debug = []
# at9p mainline (BEP5) locator: arbitrary-infohash announce/get_peers, which
# iroh's internal pkarr cannot do. Off by default (#889 / epic #880 Track C).
mainline-locator = ["dep:blake3", "dep:mainline"]
# Experimental iroh-blobs-backed object store (F1, #899). Local store only;
# networked fetch via the at9p locator is F2 (#900).
iroh-blobs = ["dep:iroh-blobs"]

[lints]
workspace = true
