[package]
name = "hyprstream-9p"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "9P2000.L wire protocol bridge for hyprstream VFS federation"

[lib]
crate-type = ["rlib"]

[dependencies]
# VFS types (Mount trait, Fid, DirEntry, Stat)
hyprstream-vfs = { path = "../hyprstream-vfs" }

# RPC types (Subject for caller identity)
hyprstream-rpc = { path = "../hyprstream-rpc" }

# Async trait support
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util"] }

[features]
default = []
