[package]
name = "hyprstream-compositor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure Rust TUI compositor — WASM-compatible chrome state machine"

[dependencies]
avt     = "0.17"
ratatui = { version = "0.30", default-features = false, features = ["layout-cache"] }
waxterm = { path = "../waxterm", features = ["avt"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
