[package]
name = "hyprstream-containedfs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Path-contained filesystem operations with 9P-aligned naming"

[dependencies]
thiserror.workspace = true
serde.workspace = true
bitflags = "2.4"
reflink-copy = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
pathrs = "0.2"

[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
safe-path.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
