[package]
name = "hyprstream-discovery"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "Service discovery and endpoint resolution for hyprstream"

[lib]
crate-type = ["rlib"]  # rlib-only: OnceLock singletons must be shared workspace-wide

[features]
# K4c (#787) — the placement→PodSpec vocabulary map. Off by default: the
# scheduling substrate stays cluster-agnostic; only a Kubernetes backend opts in.
# Pulls in `hyprstream-k8s`, whose re-exported `k8s-openapi` gives the PodSpec /
# Quantity / Affinity types at the single workspace-pinned `v1_32` version.
k8s = ["dep:hyprstream-k8s"]

[dependencies]
# Workspace crates
hyprstream-rpc = { path = "../hyprstream-rpc" }
# K4c (#787) — optional, only for the `k8s` feature's placement→PodSpec map.
hyprstream-k8s = { path = "../hyprstream-k8s", optional = true }
hyprstream-util = { path = "../hyprstream-util" }
hyprstream-rpc-derive = { path = "../hyprstream-rpc-derive" }
# #524 P1 — placement directory ingestion: CAR parsing + MST walk + record
# decoding (ai.hyprstream.placement.* lexicons).
hyprstream-pds = { path = "../hyprstream-pds" }

# Async runtime
async-trait = { workspace = true }

# Serialization
capnp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }
chrono = { workspace = true }

# Crypto (for signing keys)
ed25519-dalek = { workspace = true }
# #932 — the `#atproto` P-256 verifying key type named by the verified-by-
# construction ingest seam (`RecordResolver::resolve_verifying_key`); also used
# to build/verify real CAR proofs in getRecord + placement tests.
p256 = { workspace = true }

[dev-dependencies]
# #431 / #524 — build/verify real CAR proofs in getRecord + placement tests.
p256 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
# #893 (at9p D1) — mint real hybrid-signed capsules for the resolver tests.
hyprstream-crypto = { path = "../hyprstream-crypto" }
# K4c (#787) — property tests for the placement→PodSpec map's no-widening invariant.
proptest = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
capnpc = { workspace = true }
capnp = { workspace = true }
serde_json = { workspace = true }
hyprstream-rpc-build = { workspace = true }

[lints]
workspace = true
