[package]
name = "hyprstream-k8s"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hyprstream/hyprstream"
description = "Kubernetes CRD schemas for hyprstream resources under *.hyprstream.io (Model, Adapter, TrainingRun, InferenceService, TenantBinding)"

[lib]
name = "hyprstream_k8s"
path = "src/lib.rs"

[features]
# CRD *type* definitions + YAML emission compile with no features and no cluster.
default = []
# `k8s` gates anything that needs a live client / controller-runtime, including
# the `/k8s` VFS projection (K7, #782) — it needs the kube watch runtime plus the
# in-process VFS `Mount` trait + verified `Subject` from hyprstream-vfs/-rpc.
# `ws` adds the websocket upgrade path kube uses for pod `exec`/`attach`
# (`AttachedProcess`), consumed by the workers `k8s` sandbox backend.
k8s = [
    "dep:futures",
    "dep:tokio",
    "dep:tracing",
    "kube/client",
    "kube/runtime",
    "kube/rustls-tls",
    "kube/ws",
    "dep:hyprstream-vfs",
    "dep:hyprstream-rpc",
    "dep:async-trait",
    "dep:parking_lot",
]
# CRD → grant compilation (#929): a `TenantBinding`'s authorable entitlement
# compiles into an issuer-signed UCAN grant + an `ai.hyprstream.ledger.allocation`
# record. Pure logic — no cluster, no kube client — so it is a feature separate
# from `k8s`. Pulls the UCAN/COSE primitives (`hyprstream-rpc`) and the
# allocation lexicon (`hyprstream-pds`); the CRD *types* it lowers never require
# them. `k8s` + `grant` together enable the operator reconcile wiring that
# compiles a binding's entitlement into a grant on observe.
grant = [
    "dep:hyprstream-rpc",
    "dep:hyprstream-pds",
    "dep:ed25519-dalek",
    "dep:anyhow",
    "dep:rand",
]

[dependencies]
# `derive` gives the CustomResource derive + CustomResourceExt (kube-core, no client).
# `cel` gives client-side CEL validation (kube-core, no client) so `validate_cel()`
# and `x-kubernetes-validations` emission work offline in tests.
kube = { version = "4.0", default-features = false, features = ["derive", "cel"] }
k8s-openapi = { version = "0.28", features = ["v1_32"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = "1"
futures = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# `/k8s` VFS projection (K7, #782) — all optional, pulled in by the `k8s` feature.
hyprstream-vfs = { path = "../hyprstream-vfs", optional = true }
hyprstream-rpc = { path = "../hyprstream-rpc", optional = true }
async-trait = { version = "0.1", optional = true }
parking_lot = { workspace = true, optional = true }

# CRD → grant compilation (#929), gated behind the `grant` feature.
hyprstream-pds = { path = "../hyprstream-pds", optional = true }
ed25519-dalek = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[lints]
workspace = true
