[package]
name = "hyprstream-ledger"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "Embedded double-entry credit engine (accounting plane): LedgerBackend trait, MemLedger reference/oracle, two-phase transfer state machine (#923)"

# The core crate carries no tokio, no FFI, no RPC/VFS/PDS deps (D3): it must
# build for wasm32-unknown-unknown so a browser cell / Wanix guest can run a real
# ledger for local-first quota. `hyprstream-crypto` (#920, WASM-safe) is an
# UNCONDITIONAL dependency — signed checkpoints are load-bearing, so a build that
# cannot verify them must not exist (no `cose` feature gate, ratified).
#
# The `rocks` (RocksLedger, item 1.2) and `tigerbeetle` (item 2.5) backends land
# behind their own cargo features in later work items; they are intentionally
# absent here so the skeleton stays FFI-free and wasm-clean.

[dependencies]
hyprstream-crypto = { path = "../hyprstream-crypto" }

blake3 = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
ciborium = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
