[package]
name = "hyprstream-p2p"
version = "0.2.0"
edition = "2021"
authors = ["Erica Windsich <erica@cyberdione.ai>"]
description = "Decentralized git hosting over iroh-blobs + a mainline DHT locator"
license = "MIT"
repository = "https://github.com/hyprstream/hyprstream/tree/main/crates/hyprstream-p2p"
keywords = ["git", "p2p", "iroh", "decentralized", "networking"]
categories = ["network-programming", "development-tools"]

[[bin]]
name = "gittorrentd"
path = "src/bin/gittorrentd.rs"

[[bin]]
name = "git-remote-gittorrent"
path = "src/bin/git-remote-gittorrent.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Crypto
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

# Encoding
hex = "0.4"
base64 = "0.21"

# Configuration
config = "0.13"
dirs = "5.0"
toml = "0.8"

# Git utilities (0.20.3 for CVE-2024-24577 fix in libgit2 1.9.2)
git2.workspace = true

# Terminal colors
colored = "2.0"

# File operations
glob = "0.3"
tempfile = "3.0"

# XET integration dependencies
async-trait = "0.1"

# Mainline (BEP5) DHT locator for did:at9p (#889, epic #880 Track C) — the
# untrusted rendezvous plane for the iroh-blobs object facade (F3, #901).
mainline = "7.0"
blake3 = { workspace = true }

# iroh-blobs content-addressed byte transport (F1, #899). This is now the
# sole object plane behind `put_object`/`get_object` (F3 retired libp2p).
# 0.101.0 pins iroh =1.0.0-rc.0 - the exact version the workspace pins via
# web-transport-iroh 0.5.x; co-bump all three together (see workspace Cargo.toml).
iroh-blobs = { version = "=0.101.0", default-features = false, features = ["fs-store"] }
multihash = "0.19"
sha2 = "0.10"

# Additional networking and crypto
futures = "0.3"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
parking_lot.workspace = true

[features]
default = []
# Enable additional debug logging
debug = []
# F3 (#901) retired the libp2p Kademlia stack. iroh-blobs + the mainline
# locator are now the unconditional object plane (non-optional deps above).
# These names remain as no-op markers so existing `--features` flags (e.g. the
# `cargo test --features "iroh-blobs mainline-locator"` acceptance command)
# stay valid; they no longer gate any code.
iroh-blobs = []
mainline-locator = []

[lints]
workspace = true
