[package]
name = "hyprstream-pds"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "atproto PDS record store — DAG-CBOR records, MST, signed commits, CAR proofs (#392)"

[dependencies]
# P-256 ES256 signing for atproto commits (#atproto verification method).
p256 = { workspace = true }
# SHA-256 — signing digest + CIDv1 dag-cbor multihash for all repo blocks.
sha2 = { workspace = true }
# Error handling.
anyhow = { workspace = true }
# at9p capsule CIDs use the shared CIDv1/multihash API from the resolver/RPC
# layer instead of duplicating multicodec or BLAKE3-512 encoding locally.
hyprstream-rpc = { path = "../hyprstream-rpc" }
# at9p capsule/update signing (#883): policy-gated composite COSE (EdDSA +
# ML-DSA-65) via the light transport-free crypto crate. Unconditional (no
# feature gate) — Hybrid is pinned for at9p records regardless of build.
hyprstream-crypto = { path = "../hyprstream-crypto" }
# Ed25519 signing/verifying keys for the at9p composite signature path.
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
# Non-poisoning Mutex for the in-memory duplicity watermark store (#886).
parking_lot = { workspace = true }
# Operator-visible duplicity alarms; the structured event is also exported by
# the process tracing/OTel subscriber when configured.
tracing = { workspace = true }
# DID-document parsing for the bounded #atproto rotation key set (#918): a
# `RotationKeySet` is constructed from the resolved DID document's
# `verificationMethod` entries, so the trust-chain primitive decodes the
# `#atproto` / `#atproto-drain` Multikeys (multibase z + base58btc) itself.
serde_json = { workspace = true }
bs58 = "0.5"
# Note: DAG-CBOR + CIDv1 + varints are hand-rolled in src/dag_cbor.rs and
# src/cid.rs to enforce the determinism invariants (sorted keys, minimal ints,
# tag-42 links) that serde-driven CBOR cannot guarantee. No CBOR/CID crate dep.

[dev-dependencies]
# Random signing keys for round-trip / tamper tests.
rand = { workspace = true }
proptest = { workspace = true }
# at9p_resolver tests exercise the admission arm (admit_key_against_did) which is
# generic over DidDocResolve — an async trait — against a never-call test double.
async-trait = { workspace = true }

# E1 (#421) end-to-end content-addressing + identity test. The dev-deps are the
# three crates whose composition the test validates: git2db (repo → commit OID),
# hyprstream-rpc (OID → git-raw CID string), and the PDS layers exercised via the
# integration test binary itself.
git2db = { path = "../git2db" }
# git2 re-exported by git2db; used to seed a local repo and read the commit OID.
git2 = { workspace = true }
# Temp dirs for the git2db registry + source repos.
tempfile = { workspace = true }
# Async test runtime (git2db commit/clone are async).
tokio = { workspace = true }
tokio-test = { workspace = true }
# Tracing init helper (git2db logs; harmless if already initialized).
tracing-subscriber = { workspace = true }

# E7 (#421) two-node federation harness — adds the Iroh-loopback transport seam
# on top of the E1 content-addressing deps. Two independent in-process nodes
# (distinct node keys + DIDs + PDS stores) dial each other over a real Iroh
# endpoint, so Node B fetches Node A's CAR proof + content blob across an actual
# federation transport boundary (not an in-process call). Light deps only — no
# libtorch — keeping `cargo test -p hyprstream-pds` fast under host throttle.
iroh = { workspace = true }
# did:key derivation from the Ed25519 node key (ed25519_to_did_key) + the
# IrohSubstrate two-plane transport are re-exported by hyprstream-rpc (already a
# dev-dep above); ed25519-dalek (SigningKey type) is now a normal dependency
# for the at9p composite signing path (#883).

[lints]
workspace = true
