[package]
name = "hyprstream-python"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "RustPython shell for hyprstream VFS namespace"

[dependencies]
rustpython-vm = { version = "0.3", default-features = false, features = ["compiler", "encodings", "freeze-stdlib"] }
hyprstream-vfs = { path = "../hyprstream-vfs" }
async-trait = "0.1"
parking_lot = "0.12"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
