[package]
name = "hyprstream-resource"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "Dependency-light authority and lifecycle contracts for dual-attested resources (#1067)"

# Interface scaffolding only. This crate intentionally exposes no Serde/wire
# representation. Canonical DAG-CBOR/CDDL belongs exclusively to #1065.
[dependencies]
blake3 = { workspace = true }

[lints]
workspace = true
