[package]
name = "hyprstream-rpc-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Cap'n Proto build helpers, schema types, and TypeScript codegen"

[[bin]]
name = "hyprstream-ts-codegen"
path = "src/main.rs"

[[bin]]
name = "generate-rpc-diagrams"
path = "src/bin/generate_rpc_diagrams.rs"

[dependencies]
capnp = { workspace = true }
capnpc = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
