[package]
name = "hyprstream-rpc-derive"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "Derive macros for hyprstream RPC serialization"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
capnp = { workspace = true }

[lints]
workspace = true
