[package]
name = "hyprstream-rpc-std"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Standard hyprstream service schemas and generated clients"
links = "hyprstream_rpc_std"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyprstream-rpc = { path = "../hyprstream-rpc" }
hyprstream-rpc-derive = { path = "../hyprstream-rpc-derive" }

capnp = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[build-dependencies]
capnpc = { workspace = true }
hyprstream-rpc-build = { path = "../hyprstream-rpc-build" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
